--- a/Src/Ajf.Nuget.TplinkSmartplug/Ajf.Nuget.TplinkSmartplug.csproj
+++ b/Src/Ajf.Nuget.TplinkSmartplug/Ajf.Nuget.TplinkSmartplug.csproj
@@ -43,14 +43,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Commands.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StateModels.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
